CHANGES IN FLTK 1.1.0b9

	- Fixed the make problems in the test directory - some
	  make programs had trouble handling the recursive
	  dependencies on the FLUID files...
	- Now use rint() to round floating-point coordinates.
	- Demo cleanup - made sure they all worked with schemes.
	- Fl_Tabs no longer clears the unused area of the tab
	  bar.
	- Added show(argc, argv) method to Fl_Help_Dialog.
	- MacOS: implemented cut/copy/paste.
	- MacOS: improved keyboard handling, fixed keyboard
	  focus handling, fixed get_key, modified 'keyboard'
	  demo to show second mouse wheel and additional keys
	  'help' and FL_NK+'='


CHANGES IN FLTK 1.1.0b8

	- OS/2 build fixes.
	- fl_draw() didn't ignore symbol escapes properly for
	  the browsers...
	- New Fl::scheme() methods from FLTK 2.0; currently only
	  the standard ("") and plastic ("plastic") methods are
	  supported.  Schemes can be set on the command-line
	  ("-scheme plastic") or using the FLTK_SCHEME
	  environment variable.
	- MacOS: fixed iBook keyboard handling, moved 
	  remaining message handling to Carbon, added mouse
	  capture support, added timer support, added overlay
	  support, fixed double-buffering side effects.
	- The configure script wasn't using the -fpermissive or
	  -fno-exceptions options with GCC.
	- Fl_JPEG_Image and friends didn't set the depth if the
	  image file couldn't be loaded; since Fl_RGB_Image
	  didn't check for this, it could fail when displaying
	  or copying these images.
	- filename_absolute() did not always free its temporary
	  buffer.
	- filename_relative() did not do a case-insensitive
	  comparison under MacOS, OS/2, and Windows.
	- filename_isdir() didn't properly handle "D:L" under
	  WIN32.
	- Fl_Shared_Image::get() did not check to see if the
	  image could not be loaded.
	- Fl_Help_View didn't clear the line array in the
	  Fl_Help_Block structure; this causes erratic
	  formatting for some pages.
	- The font and size members of Fl_Help_Block were never
	  used.